# pristine

./: LICENSE  README.md  pristine.cabal
Pristine/: File.hs  Git.hs  Main.hs
web/: pristine.html
web/css/: pristine.css
